--- a/front/bower.json
+++ b/front/bower.json
@@ -17,11 +17,12 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.1",
     "polymer": "polymer/polymer#master",
     "paper-slider": "PolymerElements/paper-slider#^1.0.11",
-    "social-media-icons" : "master",
-    "iron-image" : "master",
+    "social-media-icons": "master",
+    "iron-image": "master",
     "x-meme": "^0.0.3",
     "awesome-slider": "*",
-    "chart-elements" : "master"
+    "chart-elements": "master",
+    "mobile-detect": "hgoebl/mobile-detect.js#^1.3.3"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
