--- a/front/bower.json
+++ b/front/bower.json
@@ -22,7 +22,10 @@
     "x-meme": "^0.0.3",
     "awesome-slider": "*",
     "chart-elements": "master",
-    "mobile-detect": "hgoebl/mobile-detect.js#^1.3.3"
+    "mobile-detect": "hgoebl/mobile-detect.js#^1.3.3",
+    "pdf-browser-viewer": "^1.0.6",
+    "pdf-element": "^1.0.13",
+    "paper-toolbar": "^1.1.6"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
