--- a/front/bower.json
+++ b/front/bower.json
@@ -25,7 +25,8 @@
     "mobile-detect": "hgoebl/mobile-detect.js#^1.3.3",
     "pdf-browser-viewer": "^1.0.6",
     "pdf-element": "^1.0.13",
-    "paper-toolbar": "^1.1.6"
+    "paper-toolbar": "^1.1.6",
+    "x-tag-deck": "master"  
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
