--- a/front/bower.json
+++ b/front/bower.json
@@ -15,23 +15,24 @@
     "iron-pages": "polymerelements/iron-pages#^1.0.0",
     "iron-selector": "polymerelements/iron-selector#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.1",
-    "polymer": "polymer/polymer#master",
+    "polymer": "polymer/polymer#^1.7.0",
     "paper-slider": "PolymerElements/paper-slider#^1.0.11",
-    "social-media-icons": "master",
-    "iron-image": "master",
+    "social-media-icons": "^1.1.0",
+    "iron-image": "^1.2.3",
     "x-meme": "^0.0.3",
     "awesome-slider": "*",
-    "chart-elements": "master",
+    "chart-elements": "^3.1.2",
     "mobile-detect": "hgoebl/mobile-detect.js#^1.3.3",
     "pdf-browser-viewer": "^1.0.6",
     "pdf-element": "^1.0.13",
     "paper-toolbar": "^1.1.6",
-    "x-tag-deck": "master"  
+    "flip-card": "^1.1.0",
+    "x-tag-deck": "master"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
   },
   "resolutions": {
-    "polymer": "master"
+    "polymer": "^1.7.0"
   }
 }
